src/objects/Custom_Event__c.object
<CustomObject>
    <fields>
        <fullName>Attached_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attached to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Custom Events</relationshipLabel>
        <relationshipName>Custom_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Custom Events (Contact)</relationshipLabel>
        <relationshipName>Events1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Event</label>
    <nameField>
        <displayFormat>CE-{0000}</displayFormat>
        <label>Custom Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>